--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -513,15 +513,9 @@ figure.no-icon {
   outline-color: $danger;
 }
 
-button.is-double-focused:focus-visible
+button.is-main
 {
-  outline-style: double !important;
-  outline-width: 6px !important;
-  border-radius: $radius-rounded;
-}
-button.is-double-focused:focus:not(:focus-visible)
-{
-  outline: none;
+  box-shadow: $button-focus-box-shadow-size $button-focus-box-shadow-color;
 }
 
 .file[role=button]:focus-visible {
